[tool.poetry]
name = "balaboba"
version = "3.0.0"
description = "Wrapper for Yandex Balaboba"
authors = ["monosans <hsyqixco@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/monosans/balaboba"
keywords = ["yalm"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28"
typing-extensions = { version = ">=3.7.4.3,<5", python = "<3.8" }

[tool.poetry.group.dev.dependencies]
black = ">=22.12"
covdefaults = "^2.2"
isort = "^5.11"
mypy = "^1.0"
pre-commit = ">=2.21,<4"
pytest = "^7.2"
pytest-cov = "^4.0"
types-requests = "^2.28"

[tool.black]
line-length = 79
target-version = ["py37"]
skip-magic-trailing-comma = true
preview = true

[tool.coverage.report]
exclude_lines = ["@(abc.)?abstractmethod"]

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.isort]
py_version = 37
profile = "black"
line_length = 79
add_imports = ["from __future__ import annotations"]
combine_as_imports = true
combine_star = true

[tool.mypy]
python_version = "3.7"
disallow_subclassing_any = false
disallow_untyped_decorators = false
warn_unreachable = true
local_partial_types = true
enable_error_code = [
    "redundant-self",
    "redundant-expr",
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
]
strict = true

[tool.pytest.ini_options]
xfail_strict = true
addopts = "--strict-markers --strict-config"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
